<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Inner Linear Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <!--First Text View-->
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/loginreg_icon" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/white" />

            <!--            for email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/xLayoutEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/datecolor"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/email_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/xTextEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>


            <!--for pass-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/xLayoutPassLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColorHint="@color/datecolor"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/pass_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/xTextPassLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Button Login-->
            <Button
                android:id="@+id/xButton_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_backgroundcolor"
                android:text="@string/sLoginButton"
                android:textAllCaps="false"
                android:textColor="@color/white" />


            <!-- Forget password filed-->
            <TextView
                android:id="@+id/xForget_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/forgetpassname"
                android:textColor="@color/white" />

            <!--dont have an account?-->
            <TextView
                android:id="@+id/xSignup_here"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/singupname"
                android:textColor="@color/white" />


        </LinearLayout>

    </ScrollView>
</LinearLayout>