<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:gravity="center"

    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Inner Linear Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/loginreg_icon" />

            <!--First Text View-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/registraion"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/white" />

            <!--            for email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/xLayoutEmailReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/date_color"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/email_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/xTextEmailReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>


            <!--for pass-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/xLayoutPassReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/datecolor"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/pass_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/xTextPassReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Button registration-->
            <Button
                android:id="@+id/xButton_registraion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_backgroundcolor"
                android:text="@string/registraionButton"
                android:textAllCaps="false"
                android:textColor="@color/white" />


            <!-- Allready have an account? Sign in here..-->
            <TextView
                android:id="@+id/xAllreadyhaveanaccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/alreadyhaveaccount"
                android:textColor="@color/white" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>